Trying to change skins

--- a/src/ooga/resources/languages/menu/English.properties
+++ b/src/ooga/resources/languages/menu/English.properties
@@ -1,4 +1,3 @@
 gofish=Go Fish
 chess=Chess
-solitaire=solitaire
-example=This is how you could report a %s error, where the "formats" parameter would specify what type of error
+solitaire=Solitaire
