Display message function added to view

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -1,2 +1,4 @@
 restart=Restart Game
 score=Score
+win=Congratulations! You've won the game.
+lose=Oh no! Looks like you lost this round. Better luck next time!
