--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -1,2 +1,4 @@
 restart=Reinicia el juego
 score=Marcador
+win=¡Felicidades! Has ganado el juego.
+lose=¡Oh no! Parece que perdiste esta ronda. ¡Mejor suerte la próxima vez!
