--- a/src/ooga/resources/languages/messages/Français.properties
+++ b/src/ooga/resources/languages/messages/Français.properties
@@ -1,2 +1,4 @@
 restart=Recommencer le jeu
 score=Marquer des points
+win=Toutes nos félicitations! Vous avez gagné le match.
+lose=Oh non! On dirait que tu as perdu ce round. Plus de chance la prochaine fois!
