added languages for errors

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -1,2 +1,14 @@
 restart=Restart Game
 score=Score
+
+InvalidFile=File is of invalid type.
+MissingAttribute=Your rules file is missing the correct %s.
+ControlError=There is a control flow error in your rules.
+action=action
+cell_group=cell group
+deck=deck
+initialize=initialization
+layout=layout
+rules=rules
+settings=settings
+style=style
