--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -1,2 +1,14 @@
 restart=Reinicia el juego
 score=Marcador
+
+InvalidFile=El archivo es de tipo no válido.
+MissingAttribute=A su archivo de reglas le falta %s correcto.
+ControlError=Hay un error de flujo de control en sus reglas.
+action=la acción
+cell_group=el grupo celular
+deck=el mazo de cartas
+initialize=la inicialización
+layout=el diseño
+rules=las normas
+settings=la configuración
+style=el estilo
