--- a/src/ooga/resources/languages/messages/Français.properties
+++ b/src/ooga/resources/languages/messages/Français.properties
@@ -1,2 +1,14 @@
 restart=Recommencer le jeu
 score=Marquer des points
+
+InvalidFile=Le fichier est de type non valide.
+MissingAttribute=Votre fichier de règles ne contient pas %s correct.
+ControlError=Il y a une erreur de flux de contrôle dans vos règles.
+action=l'action
+cell_group=la groupe de cellules
+deck=le tas de cartes
+initialize=l'initialisation
+layout=la disposition
+rules=les règles
+settings=les paramètres
+style=le style
