implemented other messages to frontend

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -1,6 +1,10 @@
 restart=Restart Game
 score=Score
 
+win=Congratulations! You win!
+loss=Sorry. You lose.
+invalid=That was an invalid move.
+
 InvalidFile=File is of invalid type.
 MissingAttribute=Your rules file is missing the correct %s.
 ControlError=There is a control flow error in your rules.
