implemented XML Writing for Style information and completed the user settings pipeline

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -8,6 +8,7 @@ invalid=That was an invalid move.
 InvalidFile=File is of invalid type.
 MissingAttribute=Your rules file is missing the correct %s.
 ControlError=There is a control flow error in your rules.
+UnknownError=An unknown error has occurred.
 action=action
 cell_group=cell group
 deck=deck
