--- a/src/ooga/resources/languages/messages/Français.properties
+++ b/src/ooga/resources/languages/messages/Français.properties
@@ -8,6 +8,7 @@ invalid=C'était une décision invalide.
 InvalidFile=Le fichier est de type non valide.
 MissingAttribute=Votre fichier de règles ne contient pas %s correct.
 ControlError=Il y a une erreur de flux de contrôle dans vos règles.
+UnknownError=Une erreur inconnue s'est produite.
 action=l'action
 cell_group=la groupe de cellules
 deck=le tas de cartes
