--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -8,6 +8,7 @@ invalid=Ese fue un movimiento inválido.
 InvalidFile=El archivo es de tipo no válido.
 MissingAttribute=A su archivo de reglas le falta %s correcto.
 ControlError=Hay un error de flujo de control en sus reglas.
+UnknownError=Un error desconocido a ocurrido.
 action=la acción
 cell_group=el grupo celular
 deck=el mazo de cartas
