Added button which pops up instructions window

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -16,5 +16,10 @@ rules=rules
 settings=settings
 style=style
 
+insns=Instructions
+solitaire_insns=Solitaire is so fun.
+gofish_insns=Go fish is so fun.
+chess_insns=Chess is so fun.
+
 win=Congratulations! You've won the game.
 loss=Oh no! Looks like you lost this round. Better luck next time!
