--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -16,5 +16,10 @@ rules=las normas
 settings=la configuración
 style=el estilo
 
+insns=Instrucciones
+solitaire_insns=Solitaire is so divertido.
+gofish_insns=Go fish is so divertido.
+chess_insns=Chess is so divertido.
+
 win=¡Felicidades! Has ganado el juego.
 loss=¡Oh no! Parece que perdiste esta ronda. ¡Mejor suerte la próxima vez!
