--- a/src/ooga/resources/languages/messages/Français.properties
+++ b/src/ooga/resources/languages/messages/Français.properties
@@ -16,5 +16,10 @@ rules=les règles
 settings=les paramètres
 style=le style
 
+insns=Instructions
+solitaire_insns=Solitaire is so je suis un potaton.
+gofish_insns=Go fish is so je suis un potaton.
+chess_insns=Chess is so je suis un potaton.
+
 win=Félicitations! Vous avez gagné le match.
 loss=Oh non! On dirait que tu as perdu ce round. Plus de chance la prochaine fois!
