added language-based instructions for solitaire and memory

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -16,10 +16,11 @@ rules=rules
 settings=settings
 style=style
 
-insns=Instructions
-solitaire_insns=Solitaire is so fun.
-gofish_insns=Go fish is so fun.
-chess_insns=Chess is so fun.
-
 win=Congratulations! You've won the game.
 loss=Oh no! Looks like you lost this round. Better luck next time!
+
+insns=Instructions
+solitaire_insns=Solitaire is a one player game in which the player attempts to collect all of the cards into their relevant suit piles at the top of the screen. \nCards can be stacked on other face up cards in the 7 action piles when the card beneath them is of the opposite color and of a value 1 greater. \nCards can be dragged to the suit piles if the card is of the same suit and 1 greater than the value in the pile. \nAdditional cards can be drawn from the deck into the hand pile, and the hand pile can be reset to the deck when the deck is empty. 
+memory_insns=Memory is a one player game in which identical cards are matched with each other. \nClick on a card to flip it face up. Click another card to flip it face up. \nDrag the cards on top of one another, and if they match, they'll disappear. \nContinue playing until all of the cards have disappeared. 
+gofish_insns=Go fish is so fun.
+chess_insns=Chess is so fun.
