--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -16,10 +16,11 @@ rules=las normas
 settings=la configuración
 style=el estilo
 
-insns=Instrucciones
-solitaire_insns=Solitaire is so divertido.
-gofish_insns=Go fish is so divertido.
-chess_insns=Chess is so divertido.
-
 win=¡Felicidades! Has ganado el juego.
 loss=¡Oh no! Parece que perdiste esta ronda. ¡Mejor suerte la próxima vez!
+
+insns=Instrucciones
+solitaire_insns=El solitario es un juego de un jugador en el que el jugador intenta recoger todas las cartas en sus montones de palo relevantes en la parte superior de la pantalla. \nLas cartas se pueden apilar en otras cartas boca arriba en las 7 pilas de acción cuando la carta debajo de ellas es del color opuesto y de un valor 1 mayor. \nLas cartas se pueden arrastrar a las pilas de palo si la carta es del mismo palo y 1 mayor que el valor en la pila. \nSe pueden robar cartas adicionales de la baraja a la pila de manos, y la pila de manos se puede restablecer a la baraja cuando la baraja está vacía.
+memory_insns=Memory es un juego de un jugador en el que se combinan cartas idénticas entre sí. \nHaz clic en una tarjeta para voltearla boca arriba. Haz clic en otra carta para voltearla boca arriba. \nArrastra las cartas una encima de la otra, y si coinciden, desaparecerán. \nContinúa jugando hasta que todas las cartas hayan desaparecido.
+gofish_insns=Go fish is so divertido.
+chess_insns=Chess is so divertido.
