added 52card instructions

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -24,3 +24,4 @@ solitaire_insns=Solitaire is a one player game in which the player attempts to c
 memory_insns=Memory is a one player game in which identical cards are matched with each other. \nClick on a card to flip it face up. Click another card to flip it face up. \nDrag the cards on top of one another, and if they match, they'll disappear. \nContinue playing until all of the cards have disappeared. 
 gofish_insns=Go fish is so fun.
 chess_insns=Chess is so fun.
+52card_insns=Someone dropped 52 cards, and you have to pick them up!\nDrag the cards onto the pile in the bottom left corner.
