--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -24,3 +24,4 @@ solitaire_insns=El solitario es un juego de un jugador en el que el jugador inte
 memory_insns=Memory es un juego de un jugador en el que se combinan cartas idénticas entre sí. \nHaz clic en una tarjeta para voltearla boca arriba. Haz clic en otra carta para voltearla boca arriba. \nArrastra las cartas una encima de la otra, y si coinciden, desaparecerán. \nContinúa jugando hasta que todas las cartas hayan desaparecido.
 gofish_insns=Go fish is so divertido.
 chess_insns=Chess is so divertido.
+52card_insns=Alguien dejó caer 52 cartas, ¡y tienes que recogerlas!\nArrastra las cartas a la pila en la esquina inferior izquierda.
