--- a/src/ooga/resources/languages/messages/Français.properties
+++ b/src/ooga/resources/languages/messages/Français.properties
@@ -24,3 +24,4 @@ solitaire_insns=Solitaire est un jeu à un joueur dans lequel le joueur essaie de
 memory_insns=La mémoire est un jeu à un joueur dans lequel des cartes identiques sont appariées les unes avec les autres. \nCliquez sur une carte pour la retourner face visible. Cliquez sur une autre carte pour la retourner face visible. \nFaites glisser les cartes les unes sur les autres, et si elles correspondent, elles disparaîtront. \nContinuez de jouer jusqu'à ce que toutes les cartes aient disparu.
 gofish_insns=Go fish is so je suis un potaton.
 chess_insns=Chess is so je suis un potaton.
+52card_insns=Quelqu'un a laissé tomber 52 cartes et vous devez les récupérer! Faites glisser les cartes sur la pile dans le coin inférieur gauche.
