added extra languages

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -25,3 +25,7 @@ memory_insns=Memory is a one player game in which identical cards are matched wi
 gofish_insns=Go fish is so fun.
 chess_insns=Chess is so fun.
 52card_insns=Someone dropped 52 cards, and you have to pick them up!\nDrag the cards onto the pile in the bottom left corner.
+
+save=Save
+savefilechoosertitle=Save a Solitaire Confinement File
+XMLFile=XML File
