--- a/src/ooga/resources/languages/messages/Español.properties
+++ b/src/ooga/resources/languages/messages/Español.properties
@@ -1,27 +1,30 @@
 restart=Reinicia el juego
 score=Marcador
 
-invalid=Ese fue un movimiento inválido.
+invalid=Ese fue un movimiento invï¿½lido.
 
-InvalidFile=El archivo es de tipo no válido.
+InvalidFile=El archivo es de tipo no vï¿½lido.
 MissingAttribute=A su archivo de reglas le falta %s correcto.
 ControlError=Hay un error de flujo de control en sus reglas.
 UnknownError=Un error desconocido a ocurrido.
-action=la acción
+action=la acciï¿½n
 cell_group=el grupo celular
 deck=el mazo de cartas
-initialize=la inicialización
-layout=el diseño
+initialize=la inicializaciï¿½n
+layout=el diseï¿½o
 rules=las normas
-settings=la configuración
+settings=la configuraciï¿½n
 style=el estilo
 
-win=¡Felicidades! Has ganado el juego.
-loss=¡Oh no! Parece que perdiste esta ronda. ¡Mejor suerte la próxima vez!
+win=ï¿½Felicidades! Has ganado el juego.
+loss=ï¿½Oh no! Parece que perdiste esta ronda. ï¿½Mejor suerte la prï¿½xima vez!
 
 insns=Instrucciones
-solitaire_insns=El solitario es un juego de un jugador en el que el jugador intenta recoger todas las cartas en sus montones de palo relevantes en la parte superior de la pantalla. \nLas cartas se pueden apilar en otras cartas boca arriba en las 7 pilas de acción cuando la carta debajo de ellas es del color opuesto y de un valor 1 mayor. \nLas cartas se pueden arrastrar a las pilas de palo si la carta es del mismo palo y 1 mayor que el valor en la pila. \nSe pueden robar cartas adicionales de la baraja a la pila de manos, y la pila de manos se puede restablecer a la baraja cuando la baraja está vacía.
-memory_insns=Memory es un juego de un jugador en el que se combinan cartas idénticas entre sí. \nHaz clic en una tarjeta para voltearla boca arriba. Haz clic en otra carta para voltearla boca arriba. \nArrastra las cartas una encima de la otra, y si coinciden, desaparecerán. \nContinúa jugando hasta que todas las cartas hayan desaparecido.
+solitaire_insns=El solitario es un juego de un jugador en el que el jugador intenta recoger todas las cartas en sus montones de palo relevantes en la parte superior de la pantalla. \nLas cartas se pueden apilar en otras cartas boca arriba en las 7 pilas de acciï¿½n cuando la carta debajo de ellas es del color opuesto y de un valor 1 mayor. \nLas cartas se pueden arrastrar a las pilas de palo si la carta es del mismo palo y 1 mayor que el valor en la pila. \nSe pueden robar cartas adicionales de la baraja a la pila de manos, y la pila de manos se puede restablecer a la baraja cuando la baraja estï¿½ vacï¿½a.
+memory_insns=Memory es un juego de un jugador en el que se combinan cartas idï¿½nticas entre sï¿½. \nHaz clic en una tarjeta para voltearla boca arriba. Haz clic en otra carta para voltearla boca arriba. \nArrastra las cartas una encima de la otra, y si coinciden, desaparecerï¿½n. \nContinï¿½a jugando hasta que todas las cartas hayan desaparecido.
 gofish_insns=Go fish is so divertido.
 chess_insns=Chess is so divertido.
-52card_insns=Alguien dejó caer 52 cartas, ¡y tienes que recogerlas!\nArrastra las cartas a la pila en la esquina inferior izquierda.
+52card_insns=Alguien dejï¿½ caer 52 cartas, ï¿½y tienes que recogerlas!\nArrastra las cartas a la pila en la esquina inferior izquierda.
+
+save=Salvar
+savefilechoosertitle=Save a Solitaire Confinement File
