added war instructions and translations into the resource files

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -26,3 +26,4 @@ rps_insns= Rock, Paper, Scissors is a game played against a computer. \nBegin by
 gofish_insns=Go fish is so fun.
 chess_insns=Chess is so fun.
 52card_insns=Someone dropped 52 cards, and you have to pick them up!\nDrag the cards onto the pile in the bottom left corner.
+war_insns=This is a two player game, player one must first move a\ncard from their deck to the staging cell immediately clockwise to it,\nthen player two does the same. Player one moves their staged card to the battle pile in \nbetween the two decks and player two does the same. The cards go to the player who’s card was\nhigher in value (ace is high). If the cards have the same value, they remain in the middle and another round\nbegins (a “war”) and winner of that round takes all four cards in the middle. The first player\nto run out of cards loses, if you run out of cards in your primary deck you can drag your \ncollected cards backnto the empty deck to refresh and play on.
