refactoring magic values

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -27,6 +27,8 @@ gofish_insns=Go fish is so fun.
 chess_insns=Chess is so fun.
 52card_insns=Someone dropped 52 cards, and you have to pick them up!\nDrag the cards onto the pile in the bottom left corner.
 
-save=Save
+Save=Save
 savefilechoosertitle=Save a Solitaire Confinement File
 XMLFile=XML File
+Index=Rank
+Scores=Score
