removing magic values

--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -34,4 +34,8 @@ savefilechoosertitle=Save a Solitaire Confinement File
 XMLFile=XML File
 Index=Rank
 Scores=Score
+High Scores=High Scores
+Load Game=Load Game
+Load Header=Choose a Solitaire Confinement File
+
 
