--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -34,8 +34,8 @@ savefilechoosertitle=Save a Solitaire Confinement File
 XMLFile=XML File
 Index=Rank
 Scores=Score
-High Scores=High Scores
-Load Game=Load Game
-Load Header=Choose a Solitaire Confinement File
+High_Scores=High Scores
+Load_Game=Load Game
+Load_Header=Choose a Solitaire Confinement File
 
 
