--- a/src/ooga/resources/languages/messages/Français.properties
+++ b/src/ooga/resources/languages/messages/Français.properties
@@ -29,7 +29,13 @@ chess_insns=Chess is so je suis un potaton.
 war_insns=Il s'agit d'un jeu à deux joueurs, le joueur un doit d'abord\ndéplacer une carte de son deck vers la cellule intermédiaire immédiatement dans le sens horaire,\npuis le joueur deux fait de même. Le joueur un déplace sa carte mise en scène vers la pile de\nbataille entre les deux ponts et le joueur deux fait de même. Les cartes vont au joueur dont la valeur\nest la plus élevée (l'as est élevé). Si les cartes ont la même valeur, elles restent au\nmilieu et un autre tour commence (une «guerre») et le vainqueur de ce tour prend les quatre\ncartes au milieu. Le premier joueur à manquer de cartes perd, si vous manquez de cartes\ndans votre deck principal, vous pouvez faire glisser vos cartes collectées vers le deck vide\npour rafraîchir et jouer.
 
 
-save=Sauver
+Save=Save
 savefilechoosertitle=Save a Solitaire Confinement File
+XMLFile=XML File
+Index=Rank
+Scores=Score
+High_Scores=High Scores
+Load_Game=Load Game
+Load_Header=Choose a Solitaire Confinement File
 
 
