--- a/src/ooga/resources/languages/games/Español.properties
+++ b/src/ooga/resources/languages/games/Español.properties
@@ -1,5 +1,6 @@
 solitaire=Solitaire
 memory=Memoria
 52card=Recogida de 52 cartas
-rps=Piedra Papel tijeras
+rps=Piedra Papel Tijeras
 war=Guerra
+conquest=Conquista
