--- a/src/ooga/resources/languages/games/Français.properties
+++ b/src/ooga/resources/languages/games/Français.properties
@@ -2,4 +2,5 @@ solitaire=Solitaire
 52card=Ramassage de 52 cartes
 memory=Mémoire
 rps=Pierre papier ciseaux
-war=guerre
+war=Guerre
+conquest=Conquête
