--- a/src/ooga/resources/languages/messages/English.properties
+++ b/src/ooga/resources/languages/messages/English.properties
@@ -26,7 +26,7 @@ gofish_insns=Go fish is so fun.
 chess_insns=Chess is so fun.
 52card_insns=Someone dropped 52 cards, and you have to pick them up!\nDrag the cards onto the pile in the bottom left corner.
 war_insns=This is a two player game, player one must first move a\ncard from their deck to the staging cell immediately clockwise to it,\nthen player two does the same. Player one moves their staged card to the battle pile in \nbetween the two decks and player two does the same. The cards go to the player who’s card was\nhigher in value (ace is high). If the cards have the same value, they remain in the middle and another round\nbegins (a “war”) and winner of that round takes all four cards in the middle. The first player\nto run out of cards loses, if you run out of cards in your primary deck you can drag your \ncollected cards backnto the empty deck to refresh and play on.
-
+conquest_insns= Conquest is a game like war, but you get to choose your cards! \n The player makes the first move, drawing a card from anywhere in their deck to the staging cell above it. \n Then draw a card from your opponent's deck onto their staging area. Player one moves their staged card to the center battle pile, and then player two does the same. The rules are as follows: \n\t The player with the higher card gains 50 points but loses their card. \n\t The player with the lower card keeps their card but loses 50 points. \n\t If there is a tie, each player regains their card. \n\t If there is a tie with aces, both cards are lost. \n Play continues until 1 player runs out of cards, at which point they gain 100 points. At any point, a player may draw a random card from the deck at left, at which point they lose 20 points.
 
 Save=Save
 savefilechoosertitle=Save a Solitaire Confinement File
