--- a/src/ooga/resources/languages/games/Français.properties
+++ b/src/ooga/resources/languages/games/Français.properties
@@ -4,4 +4,4 @@ memory=Mémoire
 rps=Pierre papier ciseaux
 war=Guerre
 conquest=Conquête
-percolation=Percolation
+colorsolitaire=Color-Blind Solitaire
